--- a/src/MEGASync/gui/ui/PSAwidget.ui
+++ b/src/MEGASync/gui/ui/PSAwidget.ui
@@ -40,13 +40,16 @@ background-color: #fffafafa; /*colorToken.surface-1*/
 {
 border: none;
 }
-</string>
-  </property>
-  <property name="type" stdset="0">
-   <string notr="true">secondary</string>
-  </property>
-  <property name="dimension" stdset="0">
-   <string notr="true">medium</string>
+
+#lTitle
+{
+line-height:20px;
+}
+
+#lDesc
+{
+color: #fffafafa; /*colorToken.text-secondary*/
+}</string>
   </property>
   <layout class="QHBoxLayout" name="horizontalLayout_4">
    <property name="leftMargin">
@@ -222,8 +225,11 @@ border: none;
                <property name="text">
                 <string/>
                </property>
-               <property name="type" stdset="0">
-                <string notr="true">title</string>
+               <property name="font-size" stdset="0">
+                <string notr="true">body-1</string>
+               </property>
+               <property name="semibold" stdset="0">
+                <bool>true</bool>
                </property>
               </widget>
              </item>
@@ -249,9 +255,6 @@ border: none;
                </property>
                <property name="lineWidth">
                 <number>0</number>
-               </property>
-               <property name="type" stdset="0">
-                <string notr="true">secondary</string>
                </property>
               </widget>
              </item>
