--- a/src/MEGASync/node_selector/gui/ui/NodeSelectorTreeViewWidget.ui
+++ b/src/MEGASync/node_selector/gui/ui/NodeSelectorTreeViewWidget.ui
@@ -355,7 +355,7 @@ color: #007C3E; /*colorToken.text-success*/
                      </size>
                     </property>
                     <property name="text">
-                     <string>...</string>
+                     <string notr="true"/>
                     </property>
                     <property name="icon">
                      <iconset resource="../../../gui/Resources_common.qrc">
