Fixes after rebase

--- a/src/MEGASync/gui/Resources_dark.qrc
+++ b/src/MEGASync/gui/Resources_dark.qrc
@@ -170,5 +170,6 @@
         <file alias="Activity@3x.gif">images/themed/dark/Activity@3x.gif</file>
         <file alias="arrow-down-small-thin-outline-support-success.svg">images/themed/dark/arrow-down-small-thin-outline-support-success.svg</file>
         <file alias="arrow-up-small-thin-outline-support-success.svg">images/themed/dark/arrow-up-small-thin-outline-support-success.svg</file>
+        <file alias="app-icon">images/themed/dark/app-icon.svg</file>
     </qresource>
 </RCC>
