--- a/src/MEGASync/gui/Resources_light.qrc
+++ b/src/MEGASync/gui/Resources_light.qrc
@@ -174,5 +174,6 @@
         <file alias="Activity@3x.gif">images/themed/light/Activity@3x.gif</file>
         <file alias="arrow-down-small-thin-outline-support-success.svg">images/themed/light/arrow-down-small-thin-outline-support-success.svg</file>
         <file alias="arrow-up-small-thin-outline-support-success.svg">images/themed/light/arrow-up-small-thin-outline-support-success.svg</file>
+        <file alias="app-icon">images/themed/light/app-icon.svg</file>
     </qresource>
 </RCC>
