--- a/src/MEGASync/node_selector/gui/ui/NodeSelector.ui
+++ b/src/MEGASync/node_selector/gui/ui/NodeSelector.ui
@@ -368,7 +368,7 @@ background-color: #F7F7F7; /*colorToken.surface-1*/
   <customwidget>
    <class>SearchLineEdit</class>
    <extends>QFrame</extends>
-   <header>node_selector/gui/SearchLineEdit.h</header>
+   <header>SearchLineEdit.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
