--- a/src/MEGASync/gui/Resources_light.qrc
+++ b/src/MEGASync/gui/Resources_light.qrc
@@ -175,5 +175,6 @@
         <file alias="arrow-down-small-thin-outline-support-success.svg">images/themed/light/arrow-down-small-thin-outline-support-success.svg</file>
         <file alias="arrow-up-small-thin-outline-support-success.svg">images/themed/light/arrow-up-small-thin-outline-support-success.svg</file>
         <file alias="app-icon">images/themed/light/app-icon.svg</file>
+        <file alias="scanning_icon">images/themed/light/scanning_icon.svg</file>
     </qresource>
 </RCC>
