--- a/src/MEGASync/gui/ui/ScanningWidget.ui
+++ b/src/MEGASync/gui/ui/ScanningWidget.ui
@@ -57,7 +57,7 @@ border-radius: 8px;
       </spacer>
      </item>
      <item>
-      <widget class="QLabel" name="lAnimation">
+      <widget class="QToolButton" name="lAnimation">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
          <horstretch>0</horstretch>
@@ -66,12 +66,31 @@ border-radius: 8px;
        </property>
        <property name="minimumSize">
         <size>
-         <width>0</width>
-         <height>128</height>
+         <width>96</width>
+         <height>96</height>
+        </size>
+       </property>
+       <property name="maximumSize">
+        <size>
+         <width>96</width>
+         <height>96</height>
         </size>
        </property>
        <property name="text">
         <string/>
+       </property>
+       <property name="icon">
+        <iconset resource="../Resources_light.qrc">
+         <normaloff>:/scanning_icon</normaloff>:/scanning_icon</iconset>
+       </property>
+       <property name="iconSize">
+        <size>
+         <width>48</width>
+         <height>48</height>
+        </size>
+       </property>
+       <property name="class" stdset="0">
+        <string notr="true">icon-label</string>
        </property>
       </widget>
      </item>
@@ -308,6 +327,8 @@ border-radius: 8px;
    </item>
   </layout>
  </widget>
- <resources/>
+ <resources>
+  <include location="../Resources_light.qrc"/>
+ </resources>
  <connections/>
 </ui>
