--- a/src/MEGASync/node_selector/gui/ui/NodeSelectorTreeViewWidget.ui
+++ b/src/MEGASync/node_selector/gui/ui/NodeSelectorTreeViewWidget.ui
@@ -440,7 +440,7 @@ color: #007C3E; /*colorToken.text-success*/
                   </size>
                  </property>
                  <property name="text">
-                  <string>...</string>
+                  <string notr="true"/>
                  </property>
                 </widget>
                </item>
