Stop using a fixed constraint

--- a/src/MEGASync/gui/ui/NodeNameSetterDialog.ui
+++ b/src/MEGASync/gui/ui/NodeNameSetterDialog.ui
@@ -31,7 +31,7 @@ color: #E31B57; /*colorToken.text-error*/
     <number>16</number>
    </property>
    <property name="sizeConstraint">
-    <enum>QLayout::SetFixedSize</enum>
+    <enum>QLayout::SetDefaultConstraint</enum>
    </property>
    <property name="leftMargin">
     <number>16</number>
