SNC-5888. Tokenize upload to mega dialog & fix outline button oversize.

--- a/src/MEGASync/gui/style/WidgetsComponentsStyleSheetsSizes.css
+++ b/src/MEGASync/gui/style/WidgetsComponentsStyleSheetsSizes.css
@@ -346,6 +346,24 @@ border-width: 2px;
 border-style: solid;
 }
 
+QPushButton[type="outline"][dimension=small]
+{
+height: 22px;
+width: 22px;
+}
+
+QPushButton[type="outline"][dimension=medium]
+{
+height: 32px;
+width: 32px;
+}
+
+QPushButton[type="outline"][dimension=large]
+{
+height: 44px;
+width: 44px;
+}
+
 /*  */
 
 QPushButton.icon-button[type="outline"][dimension=small]
