--- a/src/MEGASync/gui/ui/UploadToMegaDialog.ui
+++ b/src/MEGASync/gui/ui/UploadToMegaDialog.ui
@@ -71,7 +71,7 @@ font-weight: 600;
       </size>
      </property>
      <property name="text">
-      <string>Select the upload folder for your files:</string>
+      <string>Please, select the upload folder for your files:</string>
      </property>
      <property name="alignment">
       <set>Qt::AlignBottom|Qt::AlignLeading|Qt::AlignLeft</set>
